src/laconic/laconic_meta/LaconicParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .LaconicListener import LaconicListener
else:
    from LaconicListener import LaconicListener


class LaconicParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'func'", u"'proc'", u"'{'", u"'}'", 
                     u"'int'", u"'='", u"';'", u"'list'", u"'list2'", u"'('", 
                     u"','", u"')'", u"'while'", u"'for'", u"'if'", u"'print'", 
                     u"'ifelse'", u"'return'", u"'halt'", u"'['", u"']'", 
                     u"':'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"OPERATOR_MUL_DIV", 
                      u"OPERATOR_ADD_SUB", u"OPERATOR_NEGATE", u"OPERATOR_COMPARE", 
                      u"OPERATOR_BOOLEAN", u"OPERATOR_NOT", u"OPERATOR_APPEND", 
                      u"OPERATOR_APPEND2", u"OPERATOR_CONCAT", u"OPERATOR_CONCAT2", 
                      u"OPERATOR_INDEX", u"OPERATOR_INDEX2", u"OPERATOR_LENGTH", 
                      u"OPERATOR_LENGTH2", u"COMMENT", u"WS", u"VAR", u"INT" ]

    RULE_prog = 0
    RULE_trueprog = 1
    RULE_command = 2
    RULE_nondefprog = 3
    RULE_nondefcommand = 4
    RULE_funcdef = 5
    RULE_procdef = 6
    RULE_funcprocbody = 7
    RULE_declare = 8
    RULE_intdecl = 9
    RULE_listdecl = 10
    RULE_list2decl = 11
    RULE_funcproccall = 12
    RULE_funcproccallbody = 13
    RULE_whileloop = 14
    RULE_forloop = 15
    RULE_ifstate = 16
    RULE_printstate = 17
    RULE_ifelsestate = 18
    RULE_ifelsenondefprog = 19
    RULE_elsenondefprog = 20
    RULE_ifnondefprog = 21
    RULE_whilenondefprog = 22
    RULE_ifelseexpr = 23
    RULE_ifexpr = 24
    RULE_whileexpr = 25
    RULE_expr = 26
    RULE_assign = 27
    RULE_returnstate = 28
    RULE_intexpr = 29
    RULE_listexpr = 30
    RULE_list2expr = 31

    ruleNames =  [ u"prog", u"trueprog", u"command", u"nondefprog", u"nondefcommand", 
                   u"funcdef", u"procdef", u"funcprocbody", u"declare", 
                   u"intdecl", u"listdecl", u"list2decl", u"funcproccall", 
                   u"funcproccallbody", u"whileloop", u"forloop", u"ifstate", 
                   u"printstate", u"ifelsestate", u"ifelsenondefprog", u"elsenondefprog", 
                   u"ifnondefprog", u"whilenondefprog", u"ifelseexpr", u"ifexpr", 
                   u"whileexpr", u"expr", u"assign", u"returnstate", u"intexpr", 
                   u"listexpr", u"list2expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    OPERATOR_MUL_DIV=23
    OPERATOR_ADD_SUB=24
    OPERATOR_NEGATE=25
    OPERATOR_COMPARE=26
    OPERATOR_BOOLEAN=27
    OPERATOR_NOT=28
    OPERATOR_APPEND=29
    OPERATOR_APPEND2=30
    OPERATOR_CONCAT=31
    OPERATOR_CONCAT2=32
    OPERATOR_INDEX=33
    OPERATOR_INDEX2=34
    OPERATOR_LENGTH=35
    OPERATOR_LENGTH2=36
    COMMENT=37
    WS=38
    VAR=39
    INT=40

    def __init__(self, input):
        super(LaconicParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def trueprog(self):
            return self.getTypedRuleContext(LaconicParser.TrueprogContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_prog

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterProg(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitProg(self)




    def prog(self):

        localctx = LaconicParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.trueprog()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TrueprogContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.TrueprogContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LaconicParser.EOF, 0)

        def command(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LaconicParser.CommandContext)
            else:
                return self.getTypedRuleContext(LaconicParser.CommandContext,i)


        def getRuleIndex(self):
            return LaconicParser.RULE_trueprog

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterTrueprog(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitTrueprog(self)




    def trueprog(self):

        localctx = LaconicParser.TrueprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_trueprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaconicParser.T__0) | (1 << LaconicParser.T__1) | (1 << LaconicParser.T__4) | (1 << LaconicParser.T__7) | (1 << LaconicParser.T__8) | (1 << LaconicParser.T__12) | (1 << LaconicParser.T__13) | (1 << LaconicParser.T__14) | (1 << LaconicParser.T__15) | (1 << LaconicParser.T__16) | (1 << LaconicParser.T__17) | (1 << LaconicParser.T__18) | (1 << LaconicParser.VAR))) != 0):
                self.state = 66
                self.command()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(LaconicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.CommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self):
            return self.getTypedRuleContext(LaconicParser.FuncdefContext,0)


        def procdef(self):
            return self.getTypedRuleContext(LaconicParser.ProcdefContext,0)


        def declare(self):
            return self.getTypedRuleContext(LaconicParser.DeclareContext,0)


        def nondefcommand(self):
            return self.getTypedRuleContext(LaconicParser.NondefcommandContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_command

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterCommand(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitCommand(self)




    def command(self):

        localctx = LaconicParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            token = self._input.LA(1)
            if token in [LaconicParser.T__0]:
                self.state = 74
                self.funcdef()

            elif token in [LaconicParser.T__1]:
                self.state = 75
                self.procdef()

            elif token in [LaconicParser.T__4, LaconicParser.T__7, LaconicParser.T__8]:
                self.state = 76
                self.declare()

            elif token in [LaconicParser.T__12, LaconicParser.T__13, LaconicParser.T__14, LaconicParser.T__15, LaconicParser.T__16, LaconicParser.T__17, LaconicParser.T__18, LaconicParser.VAR]:
                self.state = 77
                self.nondefcommand()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NondefprogContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.NondefprogContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nondefcommand(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LaconicParser.NondefcommandContext)
            else:
                return self.getTypedRuleContext(LaconicParser.NondefcommandContext,i)


        def getRuleIndex(self):
            return LaconicParser.RULE_nondefprog

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterNondefprog(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitNondefprog(self)




    def nondefprog(self):

        localctx = LaconicParser.NondefprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nondefprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LaconicParser.T__12) | (1 << LaconicParser.T__13) | (1 << LaconicParser.T__14) | (1 << LaconicParser.T__15) | (1 << LaconicParser.T__16) | (1 << LaconicParser.T__17) | (1 << LaconicParser.T__18) | (1 << LaconicParser.VAR))) != 0):
                self.state = 80
                self.nondefcommand()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NondefcommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.NondefcommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccall(self):
            return self.getTypedRuleContext(LaconicParser.FuncproccallContext,0)


        def whileloop(self):
            return self.getTypedRuleContext(LaconicParser.WhileloopContext,0)


        def forloop(self):
            return self.getTypedRuleContext(LaconicParser.ForloopContext,0)


        def ifstate(self):
            return self.getTypedRuleContext(LaconicParser.IfstateContext,0)


        def ifelsestate(self):
            return self.getTypedRuleContext(LaconicParser.IfelsestateContext,0)


        def assign(self):
            return self.getTypedRuleContext(LaconicParser.AssignContext,0)


        def returnstate(self):
            return self.getTypedRuleContext(LaconicParser.ReturnstateContext,0)


        def printstate(self):
            return self.getTypedRuleContext(LaconicParser.PrintstateContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_nondefcommand

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterNondefcommand(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitNondefcommand(self)




    def nondefcommand(self):

        localctx = LaconicParser.NondefcommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nondefcommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 86
                self.funcproccall()
                pass

            elif la_ == 2:
                self.state = 87
                self.whileloop()
                pass

            elif la_ == 3:
                self.state = 88
                self.forloop()
                pass

            elif la_ == 4:
                self.state = 89
                self.ifstate()
                pass

            elif la_ == 5:
                self.state = 90
                self.ifelsestate()
                pass

            elif la_ == 6:
                self.state = 91
                self.assign()
                pass

            elif la_ == 7:
                self.state = 92
                self.returnstate()
                pass

            elif la_ == 8:
                self.state = 93
                self.printstate()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.FuncdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcprocbody(self):
            return self.getTypedRuleContext(LaconicParser.FuncprocbodyContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_funcdef

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterFuncdef(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = LaconicParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(LaconicParser.T__0)
            self.state = 97
            self.funcprocbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.ProcdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcprocbody(self):
            return self.getTypedRuleContext(LaconicParser.FuncprocbodyContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_procdef

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterProcdef(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitProcdef(self)




    def procdef(self):

        localctx = LaconicParser.ProcdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(LaconicParser.T__1)
            self.state = 100
            self.funcprocbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncprocbodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.FuncprocbodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccallbody(self):
            return self.getTypedRuleContext(LaconicParser.FuncproccallbodyContext,0)


        def nondefprog(self):
            return self.getTypedRuleContext(LaconicParser.NondefprogContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_funcprocbody

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterFuncprocbody(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitFuncprocbody(self)




    def funcprocbody(self):

        localctx = LaconicParser.FuncprocbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcprocbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.funcproccallbody()
            self.state = 103
            self.match(LaconicParser.T__2)
            self.state = 104
            self.nondefprog()
            self.state = 105
            self.match(LaconicParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.DeclareContext, self).__init__(parent, invokingState)
            self.parser = parser

        def intdecl(self):
            return self.getTypedRuleContext(LaconicParser.IntdeclContext,0)


        def listdecl(self):
            return self.getTypedRuleContext(LaconicParser.ListdeclContext,0)


        def list2decl(self):
            return self.getTypedRuleContext(LaconicParser.List2declContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_declare

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterDeclare(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitDeclare(self)




    def declare(self):

        localctx = LaconicParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            token = self._input.LA(1)
            if token in [LaconicParser.T__4]:
                self.state = 107
                self.intdecl()

            elif token in [LaconicParser.T__7]:
                self.state = 108
                self.listdecl()

            elif token in [LaconicParser.T__8]:
                self.state = 109
                self.list2decl()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.IntdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LaconicParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LaconicParser.ExprContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_intdecl

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterIntdecl(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitIntdecl(self)




    def intdecl(self):

        localctx = LaconicParser.IntdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_intdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(LaconicParser.T__4)
            self.state = 113
            self.match(LaconicParser.VAR)
            self.state = 116
            _la = self._input.LA(1)
            if _la==LaconicParser.T__5:
                self.state = 114
                self.match(LaconicParser.T__5)
                self.state = 115
                self.expr()


            self.state = 118
            self.match(LaconicParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.ListdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LaconicParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LaconicParser.ExprContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_listdecl

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterListdecl(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitListdecl(self)




    def listdecl(self):

        localctx = LaconicParser.ListdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(LaconicParser.T__7)
            self.state = 121
            self.match(LaconicParser.VAR)
            self.state = 124
            _la = self._input.LA(1)
            if _la==LaconicParser.T__5:
                self.state = 122
                self.match(LaconicParser.T__5)
                self.state = 123
                self.expr()


            self.state = 126
            self.match(LaconicParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List2declContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.List2declContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LaconicParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LaconicParser.ExprContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_list2decl

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterList2decl(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitList2decl(self)




    def list2decl(self):

        localctx = LaconicParser.List2declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list2decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LaconicParser.T__8)
            self.state = 129
            self.match(LaconicParser.VAR)
            self.state = 132
            _la = self._input.LA(1)
            if _la==LaconicParser.T__5:
                self.state = 130
                self.match(LaconicParser.T__5)
                self.state = 131
                self.expr()


            self.state = 134
            self.match(LaconicParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncproccallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.FuncproccallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccallbody(self):
            return self.getTypedRuleContext(LaconicParser.FuncproccallbodyContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_funcproccall

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterFuncproccall(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitFuncproccall(self)




    def funcproccall(self):

        localctx = LaconicParser.FuncproccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcproccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.funcproccallbody()
            self.state = 137
            self.match(LaconicParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncproccallbodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.FuncproccallbodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i=None):
            if i is None:
                return self.getTokens(LaconicParser.VAR)
            else:
                return self.getToken(LaconicParser.VAR, i)

        def getRuleIndex(self):
            return LaconicParser.RULE_funcproccallbody

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterFuncproccallbody(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitFuncproccallbody(self)




    def funcproccallbody(self):

        localctx = LaconicParser.FuncproccallbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcproccallbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LaconicParser.VAR)
            self.state = 140
            self.match(LaconicParser.T__9)
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 141
                    self.match(LaconicParser.VAR)
                    self.state = 142
                    self.match(LaconicParser.T__10) 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 148
            self.match(LaconicParser.VAR)
            self.state = 149
            self.match(LaconicParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileloopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.WhileloopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def whileexpr(self):
            return self.getTypedRuleContext(LaconicParser.WhileexprContext,0)


        def whilenondefprog(self):
            return self.getTypedRuleContext(LaconicParser.WhilenondefprogContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_whileloop

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterWhileloop(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitWhileloop(self)




    def whileloop(self):

        localctx = LaconicParser.WhileloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(LaconicParser.T__12)
            self.state = 152
            self.match(LaconicParser.T__9)
            self.state = 153
            self.whileexpr()
            self.state = 154
            self.match(LaconicParser.T__11)
            self.state = 155
            self.match(LaconicParser.T__2)
            self.state = 156
            self.whilenondefprog()
            self.state = 157
            self.match(LaconicParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForloopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.ForloopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nondefcommand(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LaconicParser.NondefcommandContext)
            else:
                return self.getTypedRuleContext(LaconicParser.NondefcommandContext,i)


        def expr(self):
            return self.getTypedRuleContext(LaconicParser.ExprContext,0)


        def nondefprog(self):
            return self.getTypedRuleContext(LaconicParser.NondefprogContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_forloop

        def enterRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.enterForloop(self)

        def exitRule(self, listener):
            if isinstance( listener, LaconicListener ):
                listener.exitForloop(self)




    def forloop(self):

        localctx = LaconicParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_forloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(LaconicParser.T__13)
            self.state = 160
            self.match(LaconicParser.T__9)
            self.state = 161
            self.nondefcommand()
            self.state = 162
            self.match(LaconicParser.T__6)
            self.state = 163
            self.expr()
            self.state = 164
            self.match(LaconicParser.T__6)
            self.state = 165
            self.nondefcommand()
            self.state = 166
            self.match(LaconicParser.T__11)
            self.state = 167
            self.match(LaconicParser.T__2)
            self.state = 168
            self.nondefprog()
            self.state = 169
            self.match(LaconicParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LaconicParser.IfstateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifexpr(self):
            return self.getTypedRuleContext(LaconicParser.IfexprContext,0)


        def ifnondefprog(self):
            return self.getTypedRuleContext(LaconicParser.IfnondefprogContext,0)


        def getRuleIndex(self):
            return LaconicParser.RULE_ifstate
